# ssp_airplane

./: .gitignore  .gitmodules  .rgignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  f16_specs.md  notes.md  pytest.ini  requirements.txt  requirements_local.txt  simulation_config.json  sysml.py  task.md  todo.md
architecture/: aircraft.sysml  aircraft_architecture.sysml  aircraft_architecture.sysml.yaml  architecture.sysml  data_definitions.sysml  drone_architecture.sysml  part_definition.sysml  part_definitions.sysml  port_definitions.sysml  requirements.sysml  simulation.sysml  system_connections.sysml
architecture/analysis/: a_parts.sysml  a_ports.sysml  a_requirements.sysml  analysis.sysml  requirements.sysml
architecture/system/: s_ports.sysml  system_connections.sysml
cmake/: AddModelicaFmu.cmake  AddNativeFmu.cmake  AddSspPackage.cmake  PackageSsp.cmake
docs/: autopilot.md  command_reference.md  documentation_plan.md  flightgear_bridge.md  flightgear_bridge_decision.md  flightgear_bridge_status.md  getting_started.md  index.md  results_and_evaluation.md  use_cases.md
docs/dev/: autopilot.md  workflow_methodology.md
docs/presentation/: left-panel-theme.css  presentation.marp.md
docs/user/: results.md  scenarios.md
models/Aircraft/: AdaptiveWingSystem.mo  AirDataAndInertialSuite.mo  AutopilotModule.mo  CompositeAirframe.mo  ControlInterface.mo  EmergencyPowerUnit.mo  Environment.mo  FlightGearBridge.mo  FlyByWireController.mo  FuelSystem.mo  GeneratedInterfaces.mo  InputOutput.mo  Interfaces.mo  MissionComputer.mo  PowerSystem.mo  StoresManagementSystem.mo  StructuralLoadsAndPerformanceMonitor.mo  TurbofanPropulsion.mo  functions.mo  package.mo  package.order
models/SSPAirplane/: AircraftSystem.mo  AutopilotModule.mo  ControlSoftware.mo  ElectricalSystem.mo  Fuselage.mo  Interfaces.mo  MotorArray.mo  ReactorCore.mo  WingSystem.mo  package.mo  package.order
models/WingmanDrone/: AdaptiveWingSystem.mo  AutopilotModule.mo  CompositeAirframe.mo  ControlInterface.mo  DroneSystem.mo  FuelSystem.mo  GeneratedInterfaces.mo  Interfaces.mo  MissionComputer.mo  PowerSystem.mo  TurbofanPropulsion.mo  package.mo  package.order
models/adaptive_wing_system/: CMakeLists.txt
models/autopilot_module/: CMakeLists.txt
models/composite_airframe/: CMakeLists.txt
models/control_interface/: CMakeLists.txt
models/environment/: CMakeLists.txt
models/flightgear_bridge/: CMakeLists.txt
models/flightgear_bridge/native/: CMakeLists.txt
models/flightgear_bridge/native/src/: BridgeRuntime.cpp  BridgeRuntime.hpp  FlightGearBridge.cpp
models/fuel_system/: CMakeLists.txt
models/input_output/: CMakeLists.txt
models/mission_computer/: CMakeLists.txt
models/turbofan_propulsion/: CMakeLists.txt
native/flightgear_bridge/: CMakeLists.txt
native/flightgear_bridge/src/: BridgeRuntime.cpp  BridgeRuntime.hpp  FlightGearBridge.cpp
resources/references/: SystemStructure.ssd  SystemStructure_Terminal.ssd  modelDescription.xml  parameter_mapping.ssm  parameter_set.ssv  terminalsAndIcons.xml  test_scenario_results.csv
resources/scenarios/: cas_multi_store_support.json  deep_strike_penetration.json  high_altitude_intercept.json  test_scenario.json
scripts/: AGENTS.md  README.md  __init__.py  build.sh  build_fmus.py  generate_interface_defs.py  generate_model_descriptions.py  generate_parameter_set.py  generate_scenario.py  generate_ssd.py  generate_ssd_terminals.py  generate_terminals_definition.py  optimization.py  package_ssp.py  plot_results.py  rebuild_from_source.sh  save_architecture.py  simulate_scenario.py  sysml_loader.py  verify_connections.py  verify_fmu_ios.py  verify_model_equations.py  verify_modelica_interfaces.py  verify_modelica_variables.py  verify_ssd.py  verify_ssd_xml_compliance.py
scripts/analyze/: plot_results.py
scripts/artifacts/: __init__.py  build_fmus.py  build_modelica_fmu.py  build_native_fmus.py  export_artifacts.py  normalize_generated_metadata.py
scripts/cli/: __init__.py  analyze.py  analyze_plot.py  artifacts.py  artifacts_build_flightgear_bridge_fmu.py  artifacts_build_modelica_fmus.py  artifacts_build_native_fmus.py  artifacts_export.py  artifacts_generate_c_interface_defs.py  artifacts_generate_interface_defs.py  artifacts_package_native_fmus.py  artifacts_package_ssp.py  artifacts_save_architecture.py  scenarios.py  scenarios_evaluate_results.py  scenarios_generate.py  scenarios_package_ssp.py  scenarios_prepare_waypoints.py  scenarios_run_ssp4sim.py  scenarios_simulate.py  scenarios_write_config.py  verify.py  verify_model_equations.py  verify_modelica_variables.py  verify_ssd_xml.py
scripts/common/: __init__.py  c_interface_export.py  fmi_helpers.py  modelica.py  modelica_specs.py  paths.py  sysml.py  sysml_values.py
scripts/generation/: build_fmus.py  build_modelica_fmu.py  build_native_fmus.py  export_artifacts.py  generate_c_interface_defs.py  generate_interface_defs.py  generate_model_descriptions.py  generate_parameter_set.py  generate_scenario.py  generate_ssd.py  generate_ssd_terminals.py  generate_terminals_definition.py  normalize_generated_metadata.py  package_ssp.py  save_architecture.py
scripts/lib/: __init__.py  paths.py
scripts/scenarios/: generate_scenario.py
scripts/utils/: __init__.py  c_interface_export.py  fmi_helpers.py  map_geometry.py  (+5 more)
tests/: artifacts_build_native_fmus.py  conftest.py  sim.py  test_autopilot_logic.py  test_flightgear_bridge_fmu.py  test_generate_ssd.py  test_package_ssp.py  test_ros2_bridge_common.py  test_scenarios.py  test_simulation_results.py  test_sysml_parser.py
(+103 files in other folders)
